# totem-research

./: .env.example  .gitignore  .pre-commit-config.yaml  .vercelignore  ARCHITECTURE.md  CONTRIBUTING.md  DESIGN.md  FRONTEND_AUDIT_CLOSEOUT.md  FRONTEND_BUILD_ROI.md  OPERATIONS.md  README.md  SECURITY.md  index.html  logo-mockups.html  logo.md  pyproject.toml  requirements-dev.txt  requirements.txt  robots.txt  serve.py  sitemap.xml  vercel.json
.claude/commands/: audit-design.md
.github/: dependabot.yml
.github/workflows/: qa.yml
api/: cache-bust.py  caution-search.py  dart-search.py  debug.py  financial-model.py  market-alert-forecast.py  stock-code.py  stock-overview.py  stock-price.py  telegram.py  warn-search.py
assets/: app.css  app.js  secondary_pages.js  trading_calendar.js
assets/app/: calendar.js  chart.js  dom_utils.js  search.js  state.js  warning_render.js
assets/css/: about.css  base.css  responsive.css  (+2 more)
data/: patchnotes.json
design_handoff_warning_calculator/: COMPONENTS.md  DESIGN_TOKENS.md  MIGRATION.md  README.md  TONE.md
lib/: api_routes.py  cache.py  dart.py  dart_base.py  dart_corp.py  dart_full.py  dart_registry.py  dart_report.py  durable_cache.py  financial_api_security.py  financial_model.py  forecast_policy.py  gemini.py  holidays.py  http_client.py  http_utils.py  krx.py  naver.py  provider_rate_limit.py  retry.py  supabase_client.py  telegram_commands.py  telegram_idempotency.py  telegram_messages.py  timeouts.py  usecases.py  warm_cache.py  warning_policy.py
scripts/: check_frontend_budget.py  check_frontend_smoke.py  set_telegram_commands.py  sync_frontend_metadata.py  update_dart_corps.py
tests/: conftest.py  test_api_contract.py  test_cache.py  test_dart_full.py  test_dart_registry.py  test_external_cassettes.py  test_financial_model_periods.py  test_financial_model_stages.py  test_forecast_policy.py  test_http_client.py  test_http_utils.py  test_local_api_smoke.py  test_playwright_flows.py  test_provider_rate_limit.py  test_retry.py  test_serve.py  test_usecase_imports.py  test_usecases.py  test_validation.py
(+7 files in other folders)
