[project]
name = "app"
version = "0.1.0"
dependencies = [ "supabase==2.28.3" ]
requires-python = "~=3.14.0"

[project.optional-dependencies]
dev = [
    "coverage==7.13.5",
    "mypy==1.20.2",
    "playwright==1.58.0",
    "pre-commit==4.5.1",
    "pytest==9.0.2",
    "pytest-cov==7.1.0",
    "pytest-recording==0.13.4",
    "pytest-socket==0.7.0",
    "ruff==0.15.11",
    "vcrpy==8.1.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
markers = [
    "e2e: browser-level tests against the local single-page app",
    "external: requires live external APIs; excluded from CI and hooks",
    "vcr: replays committed VCR.py cassettes; CI runs with recording disabled",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E9", "F"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"api/*.py" = ["E402"]
"serve.py" = ["E402"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = "3.14"
files = [
    "lib/cache.py",
    "lib/dart_registry.py",
    "lib/errors.py",
    "lib/financial_api_security.py",
    "lib/http_client.py",
    "lib/http_utils.py",
    "lib/krx.py",
    "lib/provider_rate_limit.py",
    "lib/retry.py",
    "lib/telegram_idempotency.py",
    "lib/timeouts.py",
    "lib/validation.py",
    "lib/warm_cache.py",
]
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.coverage.run]
branch = true
source = ["api", "lib", "scripts", "serve"]
omit = [
    "tests/*",
    ".venv/*",
]

[tool.coverage.report]
fail_under = 34
show_missing = true
skip_covered = true
precision = 1

[tool.pyright]
include = ["api", "lib", "scripts", "tests", "serve.py"]
pythonVersion = "3.14"
typeCheckingMode = "basic"
reportMissingImports = "warning"
reportUnknownMemberType = "none"
reportUnknownVariableType = "none"
reportUnknownArgumentType = "none"
